fix text error overflow

--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,6 +1,7 @@
 .popup__form {
   margin: 0;
   margin-top: 22px;
+  width: 358px;
 }
 @media screen and (max-width: 480px) {
   .popup__form {
